force-app/main/default/objects/Delegated_Claim_Task__c/Delegated_Claim_Task__c.object-meta.xml
<CustomObject>
    <label>Delegated Claim Task</label>
    <nameField>
        <label>Delegated Claim Tasks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delegated Claim Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>