force-app/main/default/objects/Delegated_Claim_Task__c/fields/BenefitClaimed__c.field-meta.xml
<CustomField>
    <fullName>BenefitClaimed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Claimed</label>
    <referenceTo>cve__BenefitClaimed__c</referenceTo>
    <relationshipLabel>Benefit Claimed</relationshipLabel>
    <relationshipName>BenefitClaimeds</relationshipName>
    <type>Lookup</type>
</CustomField>