force-app/main/default/objects/Delegated_Claim_Task__c/fields/BenefitId__c.field-meta.xml
<CustomField>
    <fullName>BenefitId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Id</label>
    <referenceTo>cve__Benefit__c</referenceTo>
    <relationshipLabel>Benefits</relationshipLabel>
    <relationshipName>BenefitIds</relationshipName>
    <type>Lookup</type>
</CustomField>