force-app/main/default/objects/Delegated_Claim_Task__c/fields/ClaimEventLog__c.field-meta.xml
<CustomField>
    <fullName>ClaimEventLog__c</fullName>
    <label>Claim Event Log</label>
    <referenceTo>Claim_Event_Log__c</referenceTo>
    <relationshipLabel>Claim Event Logs</relationshipLabel>
    <relationshipName>Claim_Event_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>