force-app/main/default/objects/Delegated_Claim_Task__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>cve__Policy__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policy</relationshipName>
    <type>Lookup</type>
</CustomField>