force-app/main/default/objects/Delegated_Claim_Task__c/fields/PolicyBenefit__c.field-meta.xml
<CustomField>
    <fullName>PolicyBenefit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Benefit</label>
    <referenceTo>cve__PolicyBenefit__c</referenceTo>
    <relationshipLabel>Policy Benefits</relationshipLabel>
    <relationshipName>PolicyBenefits</relationshipName>
    <type>Lookup</type>
</CustomField>