force-app/main/default/objects/Delegated_Claim_Task__c/fields/PolicyRelationshipId__c.field-meta.xml
<CustomField>
    <fullName>PolicyRelationshipId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Relationship Id</label>
    <referenceTo>cve__PolicyRelationship__c</referenceTo>
    <relationshipLabel>Policy Relationships</relationshipLabel>
    <relationshipName>PolicyRelationshipIds</relationshipName>
    <type>Lookup</type>
</CustomField>