force-app/main/default/objects/Delegated_Claim_Task__c/fields/TaskId__c.field-meta.xml
<CustomField>
    <fullName>TaskId__c</fullName>
    <label>Task Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>